cmake/cmake-doxygen-filter.c
/* Generated by re2c 4.5 */
/* This is -*- c -*- source. */
/* This is vim: set ft=c: source. */
/**
 * @addtogroup cmake_doxygen_filter
 * @{
 * @file cmake-doxygen-filter.c
 * @brief Filters CMake source to Doxygen input.
 *
 * Filters CMake source to Doxygen input by formatting like Javascript.
 * (i.e., use Javascript parser for CMake files in your Doxyfile)
 */

#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <errno.h>
#include <stddef.h>
#include <stdarg.h>
#include <limits.h>
#include <assert.h>
#include <stdint.h>
#include <inttypes.h>

#define DEFAULT_PROG_NAME "cmake-doxygen-filter"

#include "doxygen-filter.h"

#include <jupiter/re2c_lparser/re2c_lparser.h>

static int cmake_doxygen_filter(FILE *input, const char *ifname,
                                FILE *output, const char *ofname);

/**
 * @brief Main function of CMake to Doxygen filter
 */
int main(int argc, char **argv)
{
  int iarg;

  if (argc > 0) {
    set_prog_name(argv[0]);
  } else {
    set_prog_name("");
  }

  if (argc <= 1) {
    print_error("No file name given");
    return 1;
  }

  for(iarg = 1; iarg < argc; ++iarg) {
    FILE *fp;
    int ret;
    errno = 0;
    fp = fopen(argv[iarg], "rb");
    if (!fp) {
      if (errno != 0) {
        print_error("cannot open %s: %s", argv[iarg], strerror(errno));
      } else {
        print_error("cannot open %s", argv[iarg]);
      }
      return 1;
    }
    ret = cmake_doxygen_filter(fp, argv[iarg], stdout, "<stdout>");
    fclose(fp);
    if (ret) return ret;
  }
  return 0;
}



static int cmake_doxygen_filter(FILE *input, const char *ifname,
                                FILE *output, const char *ofname)
{
  int ret;
  int cont_of_doxcomment;
  int indent;
  int i;
  struct re2c_lparser pp;
  struct re2c_lparser *p = &pp;

  re2c_lparser_init(p);
  if (re2c_lparser_fill(p, input, ifname, 0, NULL) < 0) {
    return 1;
  }

  ret = 0;
  indent = 0;
  cont_of_doxcomment = 0;

  while (!re2c_lparser_eof(p)) {
    re2c_lparser_start_token(p);
    /* debug_parser(p); */

    
    {
      unsigned char yych;
      unsigned int yyaccept = 0;
      if ((p->lim - p->cur) < 6) { if (re2c_lparser_fill(p, input, ifname, 6, NULL) < 0) goto error; }
      yych = *p->cur;
      if (yych <= '#') {
        if (yych <= '\f') {
          if (yych <= 0x08) goto yy1;
          if (yych <= '\t') goto yy2;
          if (yych <= '\n') goto yy3;
        } else {
          if (yych <= 0x1F) {
            if (yych <= '\r') goto yy5;
          } else {
            if (yych <= ' ') goto yy2;
            if (yych >= '#') goto yy6;
          }
        }
      } else {
        if (yych <= 0xE0) {
          if (yych <= 0x7F) goto yy1;
          if (yych <= 0xC1) goto yy8;
          if (yych <= 0xDF) goto yy10;
          goto yy11;
        } else {
          if (yych <= 0xF0) {
            if (yych <= 0xEF) goto yy12;
            goto yy13;
          } else {
            if (yych <= 0xF3) goto yy14;
            if (yych <= 0xF4) goto yy15;
            goto yy8;
          }
        }
      }
yy1:
      ++p->cur;
      { p->cur = p->tok; cont_of_doxcomment = 0; goto command; }
yy2:
      ++p->cur;
      { re2c_lparser_loc_upd_utf8(p); continue; }
yy3:
      ++p->cur;
yy4:
      { re2c_lparser_loc_upd_utf8(p); goto newline; }
yy5:
      yych = *++p->cur;
      if (yych == '\n') goto yy3;
      goto yy4;
yy6:
      yyaccept = 0;
      yych = *(p->mrk = ++p->cur);
      if (yych == '#') goto yy16;
yy7:
      { re2c_lparser_loc_upd_utf8(p); goto comment; }
yy8:
      ++p->cur;
yy9:
      { goto invalid_utf8; }
yy10:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy9;
      if (yych <= 0xBF) goto yy1;
      goto yy9;
yy11:
      yyaccept = 1;
      yych = *(p->mrk = ++p->cur);
      if (yych <= 0x9F) goto yy9;
      if (yych <= 0xBF) goto yy18;
      goto yy9;
yy12:
      yyaccept = 1;
      yych = *(p->mrk = ++p->cur);
      if (yych <= 0x7F) goto yy9;
      if (yych <= 0xBF) goto yy18;
      goto yy9;
yy13:
      yyaccept = 1;
      yych = *(p->mrk = ++p->cur);
      if (yych <= 0x8F) goto yy9;
      if (yych <= 0xBF) goto yy19;
      goto yy9;
yy14:
      yyaccept = 1;
      yych = *(p->mrk = ++p->cur);
      if (yych <= 0x7F) goto yy9;
      if (yych <= 0xBF) goto yy19;
      goto yy9;
yy15:
      yyaccept = 1;
      yych = *(p->mrk = ++p->cur);
      if (yych <= 0x7F) goto yy9;
      if (yych <= 0x8F) goto yy19;
      goto yy9;
yy16:
      yych = *++p->cur;
      if (yych <= 0xDF) {
        if (yych <= '#') {
          if (yych <= '"') {
            p->ctxmrk = p->cur;
            goto yy20;
          }
        } else {
          if (yych <= 0x7F) {
            p->ctxmrk = p->cur;
            goto yy20;
          }
          if (yych >= 0xC2) {
            p->ctxmrk = p->cur;
            goto yy21;
          }
        }
      } else {
        if (yych <= 0xF0) {
          if (yych <= 0xE0) {
            p->ctxmrk = p->cur;
            goto yy22;
          }
          if (yych <= 0xEF) {
            p->ctxmrk = p->cur;
            goto yy23;
          }
          p->ctxmrk = p->cur;
          goto yy24;
        } else {
          if (yych <= 0xF3) {
            p->ctxmrk = p->cur;
            goto yy25;
          }
          if (yych <= 0xF4) {
            p->ctxmrk = p->cur;
            goto yy26;
          }
        }
      }
yy17:
      p->cur = p->mrk;
      if (yyaccept == 0) goto yy7;
      else goto yy9;
yy18:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0xBF) goto yy1;
      goto yy17;
yy19:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0xBF) goto yy18;
      goto yy17;
yy20:
      ++p->cur;
      p->cur = p->ctxmrk;
      { re2c_lparser_loc_upd_utf8(p); goto doxycomment; }
yy21:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0xBF) goto yy20;
      goto yy17;
yy22:
      yych = *++p->cur;
      if (yych <= 0x9F) goto yy17;
      if (yych <= 0xBF) goto yy21;
      goto yy17;
yy23:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0xBF) goto yy21;
      goto yy17;
yy24:
      yych = *++p->cur;
      if (yych <= 0x8F) goto yy17;
      if (yych <= 0xBF) goto yy23;
      goto yy17;
yy25:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0xBF) goto yy23;
      goto yy17;
yy26:
      yych = *++p->cur;
      if (yych <= 0x7F) goto yy17;
      if (yych <= 0x8F) goto yy23;
      goto yy17;
    }


  newline:
    re2c_lparser_copy_token(p, output);
    cont_of_doxcomment = 0;
    continue;

  comment:
    if (cont_of_doxcomment) {
      for(i = indent; i > 0; i--) fprintf(output, "  ");
#ifdef PYTHON_OUTPUT
      fprintf(output, "#");
#else
      fprintf(output, "///");
#endif
      goto doxcomment_cont;
    }
    while(!re2c_lparser_eof(p)) {
      re2c_lparser_start_token(p);
      
      {
        unsigned char yych;
        if ((p->lim - p->cur) < 4) { if (re2c_lparser_fill(p, input, ifname, 4, NULL) < 0) goto error; }
        yych = *p->cur;
        if (yych <= 0xC1) {
          if (yych <= '\f') {
            if (yych == '\n') goto yy29;
          } else {
            if (yych <= '\r') goto yy31;
            if (yych >= 0x80) goto yy32;
          }
        } else {
          if (yych <= 0xEF) {
            if (yych <= 0xDF) goto yy34;
            if (yych <= 0xE0) goto yy35;
            goto yy36;
          } else {
            if (yych <= 0xF0) goto yy37;
            if (yych <= 0xF3) goto yy38;
            if (yych <= 0xF4) goto yy39;
            goto yy32;
          }
        }
yy28:
        ++p->cur;
        {
          re2c_lparser_loc_upd_utf8(p);
          continue;
        }
yy29:
        ++p->cur;
yy30:
        {
          re2c_lparser_loc_upd_utf8(p);
          re2c_lparser_copy_token(p, output);
          break;
        }
yy31:
        yych = *++p->cur;
        if (yych == '\n') goto yy29;
        goto yy30;
yy32:
        ++p->cur;
yy33:
        { goto invalid_utf8; }
yy34:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy33;
        if (yych <= 0xBF) goto yy28;
        goto yy33;
yy35:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x9F) goto yy33;
        if (yych <= 0xBF) goto yy40;
        goto yy33;
yy36:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy33;
        if (yych <= 0xBF) goto yy40;
        goto yy33;
yy37:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x8F) goto yy33;
        if (yych <= 0xBF) goto yy42;
        goto yy33;
yy38:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy33;
        if (yych <= 0xBF) goto yy42;
        goto yy33;
yy39:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy33;
        if (yych <= 0x8F) goto yy42;
        goto yy33;
yy40:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy41;
        if (yych <= 0xBF) goto yy28;
yy41:
        p->cur = p->mrk;
        goto yy33;
yy42:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy41;
        if (yych <= 0xBF) goto yy40;
        goto yy41;
      }

    }
    continue;

  doxycomment:
    cont_of_doxcomment = 1;
    for(i = indent; i > 0; i--) fprintf(output, "  ");
#ifdef PYTHON_OUTPUT
    fprintf(output, "##");
#else
    fprintf(output, "///");
#endif
  doxcomment_cont:
    while (!re2c_lparser_eof(p)) {
      re2c_lparser_start_token(p);
      
      {
        unsigned char yych;
        if ((p->lim - p->cur) < 4) { if (re2c_lparser_fill(p, input, ifname, 4, NULL) < 0) goto error; }
        yych = *p->cur;
        if (yych <= 0xC1) {
          if (yych <= '\f') {
            if (yych == '\n') goto yy45;
          } else {
            if (yych <= '\r') goto yy47;
            if (yych >= 0x80) goto yy48;
          }
        } else {
          if (yych <= 0xEF) {
            if (yych <= 0xDF) goto yy50;
            if (yych <= 0xE0) goto yy51;
            goto yy52;
          } else {
            if (yych <= 0xF0) goto yy53;
            if (yych <= 0xF3) goto yy54;
            if (yych <= 0xF4) goto yy55;
            goto yy48;
          }
        }
yy44:
        ++p->cur;
        {
          re2c_lparser_loc_upd_utf8(p);
          re2c_lparser_copy_token(p, output);
          continue;
        }
yy45:
        ++p->cur;
yy46:
        {
          re2c_lparser_loc_upd_utf8(p);
          re2c_lparser_copy_token(p, output);
          break;
        }
yy47:
        yych = *++p->cur;
        if (yych == '\n') goto yy45;
        goto yy46;
yy48:
        ++p->cur;
yy49:
        { goto invalid_utf8; }
yy50:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy49;
        if (yych <= 0xBF) goto yy44;
        goto yy49;
yy51:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x9F) goto yy49;
        if (yych <= 0xBF) goto yy56;
        goto yy49;
yy52:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy49;
        if (yych <= 0xBF) goto yy56;
        goto yy49;
yy53:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x8F) goto yy49;
        if (yych <= 0xBF) goto yy58;
        goto yy49;
yy54:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy49;
        if (yych <= 0xBF) goto yy58;
        goto yy49;
yy55:
        yych = *(p->mrk = ++p->cur);
        if (yych <= 0x7F) goto yy49;
        if (yych <= 0x8F) goto yy58;
        goto yy49;
yy56:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy57;
        if (yych <= 0xBF) goto yy44;
yy57:
        p->cur = p->mrk;
        goto yy49;
yy58:
        yych = *++p->cur;
        if (yych <= 0x7F) goto yy57;
        if (yych <= 0xBF) goto yy56;
        goto yy57;
      }

    }
    continue;

  command:
    {
      int cnt_paren;
      int narg;
      const char *cur_save;
      enum command_name {
        others,
        option, dep_option, function, endfunction, cmake_foreach, endforeach,
        cmake_if, endif, cmake_while, endwhile,
        set, macro, endmacro,
      } command;

      p->lexeme = p->tok;
      do {
        re2c_lparser_start_token(p);
        
        {
          unsigned char yych;
          unsigned int yyaccept = 0;
          if ((p->lim - p->cur) < 4) { if (re2c_lparser_fill(p, input, ifname, 4, NULL) < 0) goto error; }
          yych = *p->cur;
          if (yych <= 0x7F) {
            if (yych <= '^') {
              if (yych <= ' ') goto yy60;
              if (yych <= '@') goto yy62;
              if (yych <= 'Z') goto yy64;
              goto yy62;
            } else {
              if (yych == '`') goto yy62;
              if (yych <= 'z') goto yy64;
              goto yy62;
            }
          } else {
            if (yych <= 0xEF) {
              if (yych <= 0xC1) goto yy60;
              if (yych <= 0xDF) goto yy65;
              if (yych <= 0xE0) goto yy66;
              goto yy67;
            } else {
              if (yych <= 0xF0) goto yy68;
              if (yych <= 0xF3) goto yy69;
              if (yych <= 0xF4) goto yy70;
            }
          }
yy60:
          ++p->cur;
yy61:
          { goto invalid_utf8; }
yy62:
          ++p->cur;
yy63:
          { p->cur = p->tok; goto need_ident; }
yy64:
          yyaccept = 0;
          yych = *(p->mrk = ++p->cur);
          if (yych <= '@') {
            if (yych <= '(') {
              if (yych <= ' ') goto yy75;
              if (yych <= '\'') goto yy63;
              goto yy75;
            } else {
              if (yych <= '/') goto yy63;
              if (yych <= '9') goto yy75;
              goto yy63;
            }
          } else {
            if (yych <= '_') {
              if (yych <= 'Z') goto yy75;
              if (yych <= '^') goto yy63;
              goto yy75;
            } else {
              if (yych <= '`') goto yy63;
              if (yych <= 'z') goto yy75;
              goto yy63;
            }
          }
yy65:
          yych = *++p->cur;
          if (yych <= 0x7F) goto yy61;
          if (yych <= 0xBF) goto yy62;
          goto yy61;
yy66:
          yyaccept = 1;
          yych = *(p->mrk = ++p->cur);
          if (yych <= 0x9F) goto yy61;
          if (yych <= 0xBF) goto yy77;
          goto yy61;
yy67:
          yyaccept = 1;
          yych = *(p->mrk = ++p->cur);
          if (yych <= 0x7F) goto yy61;
          if (yych <= 0xBF) goto yy77;
          goto yy61;
yy68:
          yyaccept = 1;
          yych = *(p->mrk = ++p->cur);
          if (yych <= 0x8F) goto yy61;
          if (yych <= 0xBF) goto yy78;
          goto yy61;
yy69:
          yyaccept = 1;
          yych = *(p->mrk = ++p->cur);
          if (yych <= 0x7F) goto yy61;
          if (yych <= 0xBF) goto yy78;
          goto yy61;
yy70:
          yyaccept = 1;
          yych = *(p->mrk = ++p->cur);
          if (yych <= 0x7F) goto yy61;
          if (yych <= 0x8F) goto yy78;
          goto yy61;
yy71:
          ++p->cur;
yy72:
          p->cur = p->ctxmrk;
          { re2c_lparser_loc_upd_utf8(p); p->lexeme = p->tok; break; }
yy73:
          yych = *++p->cur;
          if (yych == '\n') goto yy71;
          goto yy72;
yy74:
          ++p->cur;
          if ((p->lim - p->cur) < 2) { if (re2c_lparser_fill(p, input, ifname, 2, NULL) < 0) goto error; }
          yych = *p->cur;
yy75:
          if (yych <= '9') {
            if (yych <= ' ') {
              if (yych == '\r') {
                p->ctxmrk = p->cur;
                goto yy73;
              }
              p->ctxmrk = p->cur;
              goto yy71;
            } else {
              if (yych == '(') {
                p->ctxmrk = p->cur;
                goto yy71;
              }
              if (yych >= '0') goto yy74;
            }
          } else {
            if (yych <= '^') {
              if (yych <= '@') goto yy76;
              if (yych <= 'Z') goto yy74;
            } else {
              if (yych == '`') goto yy76;
              if (yych <= 'z') goto yy74;
            }
          }
yy76:
          p->cur = p->mrk;
          if (yyaccept == 0) goto yy63;
          else goto yy61;
yy77:
          yych = *++p->cur;
          if (yych <= 0x7F) goto yy76;
          if (yych <= 0xBF) goto yy62;
          goto yy76;
yy78:
          yych = *++p->cur;
          if (yych <= 0x7F) goto yy76;
          if (yych <= 0xBF) goto yy77;
          goto yy76;
        }
